--- a/hands-on-curso-front-end-1-master/assets/css/style.css
+++ b/hands-on-curso-front-end-1-master/assets/css/style.css
@@ -1,4 +1,7 @@
+/*font*/
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 @import "./header.css";
+@import "./buttons.css";
 
 *{
   margin: 0;
@@ -7,4 +10,6 @@
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  text-decoration: none;
+  font-family: "Source Sans 3", sans-serif;
 }
